fix: Audio Logs display container wraps around contents instead of page

--- a/static/style.css
+++ b/static/style.css
@@ -67,12 +67,17 @@ DISPLAY AUDIO SECTION
 ################################
 */
 
+.audio-display-section {
+    align-items: center;
+}
+
 .audio-display-container {
     margin-top: 2rem;
     padding: 0.5rem;
     border: 0.15rem solid black;
     border-radius: 0.5rem;
-    /* width: fit-content; */
+    width: fit-content;
+    margin: 1.5rem 25%;
 }
 
 .audio-record-container {
@@ -80,5 +85,7 @@ DISPLAY AUDIO SECTION
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    padding-bottom: 1.5rem;
+    align-items: center;
+    padding: 1rem 0.5rem;
+    gap: 0.75rem;
 }
